src/objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>KS_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Canal_de_distribucion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Priority__c</fullName>
        <formula>Territory2Type.Priority</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Sector_Distribuidor__c</fullName>
        <label>Sector (Distribuidor)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Tipo_Sector</valueSetName>
        </valueSet>
    </fields>
</CustomObject>